--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.38", features = ["full"] }
 tokio-stream = "0.1.15"
 futures = "0.3"
 chrono = "0.4.38"
+pin-project-lite = "0.2"
 
 [dev-dependencies]
 tokio = { version = "1.38", features = ["full", "test-util"] }
